--- a/index.html
+++ b/index.html
@@ -4,18 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
     <title>Document</title>
+    
+    <style>
+        :root {
+            --very-light-pink: #c7c7c7;
+            --text-input-field: #f7f7f7;
+            --hospital-green: #ACD9B2;
+            --white: #FFFFFF;
+            --black: #000000;
+        }
+
+        body {
+            font-family: 'Quicksand', sans-serif;
+        }
+    </style>
 </head>
 <body>
-    <h1>Manipulacion del DOM basico en JavaScript</h1>
-
-    <input id="calculo1" placeholder="Escribe algo aqui">
-    <input id="calculo2" placeholder="Escribe algo aqui">
-    <button id="btnCalcular">Calcular</button>
-
-    <p id="result"></p>
-
-
-    <script src="./script.js"></script>
+    
 </body>
 </html>
