--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
     </nav>
 
-    <aside class="product-detail inactive">
+    <aside id="shoppingCartContainer" class="inactive">
         <div class="title-container">
             <img src="./assets/icons/flechita.svg" alt="flechita">
             <p class="title">shopping cart</p>
@@ -173,6 +173,21 @@
                 <p>$560.00</p>
             </div>
             <button class="primary-button">Checkout</button>
+        </div>
+    </aside>
+
+    <aside id="productDetail" class="inactive">
+        <div class="product-detail-close">
+            <img src="./assets/icons/icon_close.png" alt="close">
+        </div>
+        <img src="./assets/minirefri.png" alt="bike">
+        <div class="product-info">
+            <p>$35.00</p>
+            <p>Retro refrigerator</p>
+            <p>The Frigidaire 3.2 cuff. retro design refrigerator has enough room to store your favorite foods and drinks, while not taking up a lot of space. The convenient door basket on the reversible door is large enough for two-liter bottles and canned drinks. This low energy consumption refrigerator is perfect for the office or extra rooms away from the kitchen with its space-saving flush-back design.</p>
+            <button class="primary-button add-to-cart-button">
+                <img src="./assets/icons/bt_add_to_cart.svg" alt="add">Add to cart
+            </button>
         </div>
     </aside>
     
